# docker-traefik

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.prod  Dockerfile.traefik  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements.txt  traefik.dev.toml  traefik.prod.toml
app/: db.py  main.py
