[tool.poetry]
name = "fastapi-docker-traefik"
version = "0.1.0"
description = ""
authors = ["Chanho Ahn <moz5691@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.73.0"
uvicorn = "^0.17.3"
asyncpg = "^0.25.0"
ormar = {extras = ["postgresql"], version = "^0.10.24"}
psycopg2-binary = "^2.9.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
